--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <a class="nav-link" href="#slider">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#about">ABORT US</a>
+                  <a class="nav-link" href="#about">ABOUT US</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#services">SERVICES</a>
@@ -56,9 +56,9 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/alpine-5349811_1280.jpg" class="img-fluid w-100" >
+            <img src="https://images.pexels.com/photos/346529/pexels-photo-346529.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid w-100" >
             <div class="carousel-caption">
-              <h5>How To Make website</h5> 
+              <h5>How To Make A website</h5> 
             </div>
           </div>
           
@@ -70,7 +70,7 @@
           </div>
           
           <div class="carousel-item">
-            <img src="./img/walk-4666509_1280.jpg" class="img-fluid w-100" >
+            <img src="https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid w-100" >
             <div class="carousel-caption">
               <h5>Bussiness website Design</h5> 
             </div>
@@ -102,7 +102,7 @@
           <button type="button" class="btn btn-primary">Read More >></button>
         </div>
         <div class="col-md-6 skills-bar">
-          <p>Adoobe Photography</p>
+          <p>Adobe Photography</p>
           <div class="progress">
             <div class="progress-bar" style="width:80%">80%</div>
           </div>
@@ -110,7 +110,7 @@
           <div class="progress">
             <div class="progress-bar" style="width:88%">88%</div>
           </div>
-          <p>Wordpress</p>
+          <p>WordPress</p>
           <div class="progress">
             <div class="progress-bar" style="width:70%">70%</div>
           </div>
@@ -405,7 +405,7 @@
   <!-- footer -->
   <section id="footer">
     <div class="container text-center">
-      <p>made with <i class="fa fa-heart-o"></i> by Thydreams</p>
+      <p>Made with <i class="fa fa-heart-o"></i> at ThyDreams Studio</p>
     </div>
   </section>
   <!-- Footer end -->
