--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- navigationbar -->
     <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand text-dark" href="#">THYDREAMS</a>
+            <a class="navbar-brand text-dark" href="#">ThyDreams</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -65,14 +65,14 @@
           
           <div class="carousel-item">
             <img src="./img/dark-1845065_1280.jpg" class="img-fluid w-100" >
-            <div class="carousel-caption">
+            <div class="carousel-caption text-dark">
               <h5>Create Responsive website</h5> 
             </div>
           </div>
           
           <div class="carousel-item">
             <img src="https://images.pexels.com/photos/268533/pexels-photo-268533.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid w-100" >
-            <div class="carousel-caption">
+            <div class="carousel-caption text-dark">
               <h5>Bussiness website Design</h5> 
             </div>
           </div>
