--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               </a>
             </ul>
           </div>
-          <h2>Akshya Kumar</h2>
+          <h2>Team-member 1</h2>
               <h3>Founder</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
@@ -201,8 +201,8 @@
               </a>
             </ul>
           </div>
-          <h2>Akshya Kumar</h2>
-              <h3>Founder</h3>
+          <h2>Team-member 2</h2>
+              <h3>Designer</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="col-md-3 profile-pic text-center">
@@ -216,8 +216,8 @@
               </a>
             </ul>
           </div>
-          <h2>Akshya Kumar</h2>
-              <h3>Founder</h3>
+          <h2>Team-member 3</h2>
+              <h3>Developer</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="col-md-3 profile-pic text-center">
@@ -231,8 +231,8 @@
               </a>
             </ul>
           </div>
-          <h2>Akshya Kumar</h2>
-              <h3>Founder</h3>
+          <h2>Team-member 4</h2>
+              <h3>CDO</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
