--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="row services">
         <div class="col-md-3 text-center">
          <div class="icon">
-          <i class="fa fa-desktop"></i>
+          <i class="fa fa-desktop mt-2"></i>
          </div> 
          <h3>Web Development</h3>
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ullam ab sunt eligendi temporibus modi rem eos tempora quae iste corporis praesentium laboriosam neque assumenda suscipit expedita, itaque alias accusamus?
@@ -140,7 +140,7 @@
         </div>
         <div class="col-md-3 text-center">
          <div class="icon">
-          <i class="fa fa-tablet"></i>
+          <i class="fa fa-tablet mt-2"></i>
          </div> 
          <h3>App Development</h3>
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ullam ab sunt eligendi temporibus modi rem eos tempora quae iste corporis praesentium laboriosam neque assumenda suscipit expedita, itaque alias accusamus?
@@ -149,7 +149,7 @@
         </div>
         <div class="col-md-3 text-center">
          <div class="icon">
-          <i class="fa fa-line-chart"></i>
+          <i class="fa fa-line-chart mt-2"></i>
          </div> 
          <h3>Digital Marketing</h3>
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ullam ab sunt eligendi temporibus modi rem eos tempora quae iste corporis praesentium laboriosam neque assumenda suscipit expedita, itaque alias accusamus?
@@ -158,7 +158,7 @@
         </div>
         <div class="col-md-3 text-center">
          <div class="icon">
-          <i class="fa fa-paint-brush"></i>
+          <i class="fa fa-paint-brush mt-2"></i>
          </div> 
          <h3>Graphics Designing</h3>
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ullam ab sunt eligendi temporibus modi rem eos tempora quae iste corporis praesentium laboriosam neque assumenda suscipit expedita, itaque alias accusamus?
@@ -406,7 +406,7 @@
   <!-- footer -->
   <section id="footer">
     <div class="container text-center">
-      <p>Made with <i class="fa fa-heart-o"></i> at ThyDreams Studio</p>
+      <p>Made with <i class="fa fa-heart-o"></i> at ThyDreams Studio.</p>
     </div>
   </section>
   <!-- Footer end -->
